[package]
name = "neon-vigcoin"
version = "0.1.2"
authors = ["calidion <calidion@gmail.com>"]
license = "GPL-3.0-or-later"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_vigcoin"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
cryptonote-wallet = "0.1.6"
cryptonote-raw-crypto = "0.1.5"
hex = "0.3.2"
