[package]
name = "neon-vigcoin"
version = "0.2.0"
authors = ["calidion <calidion@gmail.com>"]
license = "GPL-3.0-or-later"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_vigcoin"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"
cryptonote-wallet = "0.2.0"
cryptonote-raw-crypto = "0.5.4"
hex = "0.3.2"
